# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: github-actions.yml
brain_games/: cli.py  games_engine.py
brain_games/games/: calc_game.py  calculator.py  even_game.py  even_number.py  gcd.py  gcd_game.py  prime_game.py  prime_number.py  progression.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
